tests/k8s_testcases/network-policy-checks-bad-path/matchexpressions_operator_has_no_value.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-operator-test-val
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app
        #no value
        operator:
      - key: app
        operator: Exists
      - key: tier
        operator: Exists
  policyTypes:
    - Ingress
    - Egress
